package ThiCK.OnTap.DuyAn_State;

public interface IState_An {
    double chietKhau_An(KhachHang_An kh);
    String getTrangThai();

}
